Django template index file

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="{% static "frontend/main.css" %}">
   </head>
   <body>
-    <div id="app">
-      <!--React loads here-->
-    </div>
+      <main id="app">
+        <!--React loads here-->
+      </main>
   </body>
   <script src="{% static "frontend/main.js" %}"></script>
 </html>
