--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -6,12 +6,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{{ title }}</title>
-    <link rel="stylesheet" href="{% static "frontend/main.css" %}">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="{% static "frontend/custom.css" %}" />
+    <link rel="stylesheet" href="{% static "frontend/main.css" %}" />
+    <!-- Font-awesom custom font -->
+    <script src="https://kit.fontawesome.com/f65742b227.js" crossorigin="anonymous"></script>
   </head>
   <body>
-      <main id="app">
-        <!--React loads here-->
-      </main>
+    <main id="app">
+      <!--React loads here-->
+    </main>
   </body>
   <script src="{% static "frontend/main.js" %}"></script>
 </html>
