HTML index template

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -11,11 +11,12 @@
     <link rel="stylesheet" href="{% static "frontend/main.css" %}" />
     <!-- Font-awesom custom font -->
     <script src="https://kit.fontawesome.com/f65742b227.js" crossorigin="anonymous"></script>
+    {# <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> #}
   </head>
   <body>
-    <main id="app">
+    <div id="app" class="pt-5 px-5">
       <!--React loads here-->
-    </main>
+    </div>
   </body>
   <script src="{% static "frontend/main.js" %}"></script>
 </html>
