Change stylesheet to support tailwind and sass

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{{ title }}</title>
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="{% static "frontend/custom.css" %}" />
-    <link rel="stylesheet" href="{% static "frontend/main.css" %}" />
+    <link rel="stylesheet" href="{% static "frontend/index.css" %}" />
+    <link rel="stylesheet" href="{% static "frontend/style-tailwind.css" %}" />
     <!-- Font-awesom custom font -->
 
     <script src="https://kit.fontawesome.com/f65742b227.js" crossorigin="anonymous"></script>
